# py-core-ds

./: .gitignore  README.md  pyproject.toml  scripts.py
py_core_ds/: Stack.py  Types.py
py_core_ds/ds/: Queue.py  Stack.py
tests/: Stack_test.py  test_py_core_ds.py
tests/ds/: Queue_test.py  Stack_test.py
